tests/compilation/examples/fail_warn.stderr
error: failed
 --> tests/compilation/examples/fail_warn.rs:3:1
  |
3 | #[error]
  | ^^^^^^^^
  |
  = note: this error originates in the attribute macro `error` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: be careful
  --> tests/compilation/examples/fail_warn.rs:10:1
   |
10 | warn!();
   | ^^^^^^^
   |
note: this warning originates from the macro invocation here
  --> tests/compilation/examples/fail_warn.rs:10:1
   |
10 | warn!();
   | ^^^^^^^
   = note: this warning originates in the macro `warn` (in Nightly builds, run with -Z macro-backtrace for more info)
